# RP_project

./: .gitignore  Dockerfile  README.md
PycharmProjects/Robotics/: 2R planner.py
docs/: demo_video.txt
src/mtc_tutorial/: CMakeLists.txt  package.xml
src/mtc_tutorial/launch/: demo_pick_and_place.launch.py  mtc_demo.launch.py
src/mtc_tutorial/src/: mtc.cpp
src/panda_pick_place/: CMakeLists.txt  package.xml
src/panda_pick_place/launch/: demo_pick_and_place.launch.py  mtc_demo.launch.py
